Closed
Bug 562897
Opened 15 years ago
Closed 15 years ago
Maemo 6 needs platformization for handling different kinds of content
Categories
(Core Graveyard :: File Handling, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: starkov.egor, Unassigned)
References
Details
Attachments
(1 file, 2 obsolete files)
|
18.47 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.3a1pre) Gecko/20091214 Firefox/3.5
Build Identifier:
Some platformed functions needed for fetching list of applications that handles file types or mime types, also need platformization for launching handlers with parameters.
Reproducible: Always
Steps to Reproduce:
var mimeSvc = Components.classes["@mozilla.org/mime;1"].getService(Ci.nsIMIMEService)
var mime = mimeSvc.getFromTypeAndExtension(anyMimeType, null);
var handlers = mime.possibleApplicationHandlers;
Actual Results:
handlers.length = 0
Expected Results:
handlers array contains the list of application handlers
| Reporter | ||
Comment 1•15 years ago
|
||
Attachment #442672 -
Flags: review?
| Reporter | ||
Updated•15 years ago
|
Attachment #442672 -
Flags: review? → review?(dougt)
Comment 2•15 years ago
|
||
Attachment #442672 -
Attachment is obsolete: true
Attachment #445326 -
Flags: review?
Attachment #442672 -
Flags: review?(dougt)
Updated•15 years ago
|
Attachment #445326 -
Flags: review? → review?(dougt)
Updated•15 years ago
|
Attachment #445326 -
Flags: review?(doug.turner) → review-
Comment 3•15 years ago
|
||
Comment on attachment 445326 [details] [diff] [review]
V0.2 - API implementation to handle an unsupported file types and schemes
no idea what contentaction is. Waiting for a public release of the maemo 6 SDK.
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•15 years ago
|
||
Attachment #445326 -
Attachment is obsolete: true
Updated•15 years ago
|
Attachment #451853 -
Flags: review?(doug.turner)
Updated•15 years ago
|
Attachment #451853 -
Flags: review?(doug.turner) → review+
Comment 5•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 6•15 years ago
|
||
Pushed patch very outdated and still contain xpcom1.9 related stuff...
we should push updated patch.
http://hg.mozilla.org/users/romaxa_gmail.com/meego-xulrunner/file/d6e6c63df26e/xulrunner/exthandler.diff
| Assignee | ||
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•