Bug 562897 -  Add required implementation to open files on Maemo 6. r=dougt

--HG--
extra : rebase_source : 49d8fbe234bf447b87486ac4404a148d676e009c